--- a/index.html
+++ b/index.html
@@ -1,4 +1,44 @@
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+    <meta charset="UTF-8">
+    <title>إمبراطورية علوش المحمية 👑</title>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+    <style>
+        body { margin: 0; background: #050505; color: white; font-family: sans-serif; }
+        #master-panel { display: none; background: #111; padding: 10px; border-bottom: 2px solid #ffd700; text-align: center; }
+        .btn { border: none; padding: 8px 15px; border-radius: 5px; font-weight: bold; cursor: pointer; margin: 5px; color: white; }
+        .btn-clear { background: #ff3333; }
+        .btn-lock { background: #555; }
+        .is-locked { background: #ff9800 !important; }
+        #chat-area { height: 75vh; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 10px; }
+        .msg-master { border-right: 5px solid #ffd700; background: rgba(255, 215, 0, 0.05); padding: 10px; border-radius: 8px; }
+        .msg-member { background: #1a1a1a; padding: 10px; border-radius: 8px; border-right: 4px solid #444; }
+        .badge { font-size: 10px; padding: 2px 6px; border-radius: 4px; font-weight: bold; margin-left: 10px; }
+        .badge-master { background: #ffd700; color: #000; }
+        .badge-member { background: #555; color: #fff; }
+        .footer { height: 15vh; background: #111; display: flex; padding: 15px; gap: 10px; border-top: 1px solid #333; }
+        input { flex: 1; background: #222; border: 1px solid #444; color: white; padding: 10px; border-radius: 8px; outline: none; }
+        button#sendBtn { background: #ffd700; color: #000; border: none; padding: 0 25px; border-radius: 8px; font-weight: bold; cursor: pointer; }
+    </style>
+</head>
+<body>
+
+<div id="master-panel">
+    <button class="btn btn-clear" onclick="clearChat()">مسح الشات 🧹</button>
+    <button id="lockBtn" class="btn btn-lock" onclick="toggleLock()">قفل الشات 🔒</button>
+</div>
+
+<div id="chat-area"></div>
+
+<div class="footer">
+    <input type="text" id="mInput" placeholder="تكلم يا ملك..." onkeypress="if(event.key==='Enter') send()">
+    <button id="sendBtn" onclick="send()">إرسال</button>
+</div>
+
 <script>
+    // إعدادات قاعدة البيانات
     const config = { databaseURL: "https://masterchat-f2da9-default-rtdb.firebaseio.com" };
     firebase.initializeApp(config);
     const db = firebase.database();
@@ -10,21 +50,20 @@
     let myRank = "عضو";
     let isChatLocked = false;
 
-    // --- نظام حماية اسم الماستر ---
+    // 2. نظام حماية الماستر (كلمة السر)
     if (myName.trim() === "علوش") {
-        let password = prompt("أدخل كلمة سر الماستر لفتح الصلاحيات:");
-        
-        if (password === "123456") { // يمكنك تغيير 123456 لأي رقم تريده
+        let pass = prompt("أدخل كلمة سر الماستر:");
+        if (pass === "123456") {
             myRank = "الماستر";
-            alert("تم التحقق.. أهلاً بك يا إمبراطور 👑");
             document.getElementById('master-panel').style.display = 'block';
+            alert("تم تفعيل الصلاحيات الملكية 👑");
         } else {
-            alert("كلمة السر غلط! ستدخل كعضو عادي.");
-            myName = "علوش (مزيف)"; // تمييز الشخص اللي يحاول يقلد اسمك
+            alert("كلمة سر خطأ!");
+            myName = "علوش (مزيف)";
         }
     }
 
-    // بقية الوظائف (الإرسال، القفل، العرض)
+    // مراقبة قفل الشات
     db.ref('chat_status').on('value', snap => {
         isChatLocked = snap.val()?.locked || false;
         let lockBtn = document.getElementById('lockBtn');
@@ -32,8 +71,8 @@
             lockBtn.innerText = "الشات مقفل 🔓";
             lockBtn.classList.add('is-locked');
             if(myRank !== "الماستر") {
-                document.getElementById('mInput').placeholder = "الشات مقفل من قبل الماستر...";
                 document.getElementById('mInput').disabled = true;
+                document.getElementById('mInput').placeholder = "الشات مقفل حالياً...";
             }
         } else {
             lockBtn.innerText = "قفل الشات 🔒";
@@ -59,17 +98,14 @@
         db.ref('chat_status').set({ locked: !isChatLocked });
     }
 
+    // عرض الرسائل
     db.ref('messages').limitToLast(50).on('child_added', snap => {
         let data = snap.val();
         if(!data.sender || !data.content) return;
-        let isMaster = (data.role === "الماستر");
+        let isM = (data.role === "الماستر");
         let div = document.createElement('div');
-        div.className = isMaster ? "msg-master" : "msg-member";
-        div.innerHTML = `
-            <span class="badge ${isMaster ? 'badge-master' : 'badge-member'}">${isMaster ? 'الماستر' : 'عضو'}</span>
-            <b style="color:${isMaster ? '#ffd700' : '#00c8ff'}">${data.sender}:</b> 
-            <span>${data.content}</span>
-        `;
+        div.className = isM ? "msg-master" : "msg-member";
+        div.innerHTML = `<span class="badge ${isM ? 'badge-master' : 'badge-member'}">${isM ? 'الماستر' : 'عضو'}</span><b style="color:${isM ? '#ffd700' : '#00c8ff'}">${data.sender}:</b> ${data.content}`;
         document.getElementById('chat-area').appendChild(div);
         document.getElementById('chat-area').scrollTop = document.getElementById('chat-area').scrollHeight;
     });
@@ -78,3 +114,5 @@
         if(!snap.exists()) document.getElementById('chat-area').innerHTML = "";
     });
 </script>
+</body>
+</html>
