--- a/index.html
+++ b/index.html
@@ -1,14 +1,118 @@
-// 2. نظام حماية الماستر (كلمة سر قوية)
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+    <meta charset="UTF-8">
+    <title>إمبراطورية علوش المحمية 👑</title>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+    <style>
+        body { margin: 0; background: #050505; color: white; font-family: sans-serif; }
+        #master-panel { display: none; background: #111; padding: 10px; border-bottom: 2px solid #ffd700; text-align: center; }
+        .btn { border: none; padding: 8px 15px; border-radius: 5px; font-weight: bold; cursor: pointer; margin: 5px; color: white; }
+        .btn-clear { background: #ff3333; }
+        .btn-lock { background: #555; }
+        .is-locked { background: #ff9800 !important; }
+        #chat-area { height: 75vh; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 10px; }
+        .msg-master { border-right: 5px solid #ffd700; background: rgba(255, 215, 0, 0.05); padding: 10px; border-radius: 8px; }
+        .msg-member { background: #1a1a1a; padding: 10px; border-radius: 8px; border-right: 4px solid #444; }
+        .badge { font-size: 10px; padding: 2px 6px; border-radius: 4px; font-weight: bold; margin-left: 10px; }
+        .badge-master { background: #ffd700; color: #000; }
+        .badge-member { background: #555; color: #fff; }
+        .footer { height: 15vh; background: #111; display: flex; padding: 15px; gap: 10px; border-top: 1px solid #333; }
+        input { flex: 1; background: #222; border: 1px solid #444; color: white; padding: 10px; border-radius: 8px; outline: none; }
+        button#sendBtn { background: #ffd700; color: #000; border: none; padding: 0 25px; border-radius: 8px; font-weight: bold; cursor: pointer; }
+    </style>
+</head>
+<body>
+
+<div id="master-panel">
+    <button class="btn btn-clear" onclick="clearChat()">مسح الشات 🧹</button>
+    <button id="lockBtn" class="btn btn-lock" onclick="toggleLock()">قفل الشات 🔒</button>
+</div>
+
+<div id="chat-area"></div>
+
+<div class="footer">
+    <input type="text" id="mInput" placeholder="تكلم يا ملك..." onkeypress="if(event.key==='Enter') send()">
+    <button id="sendBtn" onclick="send()">إرسال</button>
+</div>
+
+<script>
+    // إعدادات قاعدة البيانات
+    const config = { databaseURL: "https://masterchat-f2da9-default-rtdb.firebaseio.com" };
+    firebase.initializeApp(config);
+    const db = firebase.database();
+
+    // 1. طلب الاسم
+    let myName = prompt("أدخل اسمك يا ملك:"); 
+    if (!myName) { location.reload(); }
+
+    let myRank = "عضو";
+    let isChatLocked = false;
+
+    // 2. نظام حماية الماستر (كلمة السر)
     if (myName.trim() === "علوش") {
-        // كلمة السر الجديدة هي: Allooosh@2025 (تقدر تغيرها من هنا)
-        let pass = prompt("الوصول للمنطقة الملكية! أدخل كلمة السر:");
-        
-        if (pass === "Allooosh@2025") { 
+        let pass = prompt("أدخل كلمة سر الماستر:");
+        if (pass === "123456") {
             myRank = "الماستر";
             document.getElementById('master-panel').style.display = 'block';
-            alert("تم التحقق بنجاح.. أهلاً بك يا ملك 👑");
+            alert("تم تفعيل الصلاحيات الملكية 👑");
         } else {
-            alert("كلمة سر خاطئة! تم حظر وصولك كمسؤول.");
-            myName = "زائر_منتحل"; // تغيير الاسم إذا فشل في الدخول
+            alert("كلمة سر خطأ!");
+            myName = "علوش (مزيف)";
         }
     }
+
+    // مراقبة قفل الشات
+    db.ref('chat_status').on('value', snap => {
+        isChatLocked = snap.val()?.locked || false;
+        let lockBtn = document.getElementById('lockBtn');
+        if(isChatLocked) {
+            lockBtn.innerText = "الشات مقفل 🔓";
+            lockBtn.classList.add('is-locked');
+            if(myRank !== "الماستر") {
+                document.getElementById('mInput').disabled = true;
+                document.getElementById('mInput').placeholder = "الشات مقفل حالياً...";
+            }
+        } else {
+            lockBtn.innerText = "قفل الشات 🔒";
+            lockBtn.classList.remove('is-locked');
+            document.getElementById('mInput').disabled = false;
+        }
+    });
+
+    function send() {
+        if(isChatLocked && myRank !== "الماستر") return;
+        let input = document.getElementById('mInput');
+        let text = input.value.trim();
+        if(!text) return;
+        db.ref('messages').push({ sender: myName, content: text, role: myRank });
+        input.value = "";
+    }
+
+    function clearChat() {
+        if(confirm("مسح كل الرسائل؟")) { db.ref('messages').remove(); }
+    }
+
+    function toggleLock() {
+        db.ref('chat_status').set({ locked: !isChatLocked });
+    }
+
+    // عرض الرسائل
+    db.ref('messages').limitToLast(50).on('child_added', snap => {
+        let data = snap.val();
+        if(!data.sender || !data.content) return;
+        let isM = (data.role === "الماستر");
+        let div = document.createElement('div');
+        div.className = isM ? "msg-master" : "msg-member";
+        div.innerHTML = `<span class="badge ${isM ? 'badge-master' : 'badge-member'}">${isM ? 'الماستر' : 'عضو'}</span><b style="color:${isM ? '#ffd700' : '#00c8ff'}">${data.sender}:</b> ${data.content}`;
+        document.getElementById('chat-area').appendChild(div);
+        document.getElementById('chat-area').scrollTop = document.getElementById('chat-area').scrollHeight;
+    });
+
+    db.ref('messages').on('value', snap => {
+        if(!snap.exists()) document.getElementById('chat-area').innerHTML = "";
+    });
+</script>
+</body>
+</html>
