--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     // 2. نظام حماية الماستر (كلمة السر)
     if (myName.trim() === "علوش") {
         let pass = prompt("أدخل كلمة سر الماستر:");
-        if (pass === "123456") {
+        if (pass === "Allosh#King@2025") {
             myRank = "الماستر";
             document.getElementById('master-panel').style.display = 'block';
             alert("تم تفعيل الصلاحيات الملكية 👑");
