--- a/index.html
+++ b/index.html
@@ -1,18 +1,167 @@
-<hr style="border:0; border-top:1px solid #eee; margin:15px 0;">
-<p style="font-size: 14px; font-weight: bold;">زخرفة الاسم الملكي:</p>
-<div class="opt-grid">
-    <div class="opt-btn" onclick="rename('عـلـ★ـش')">عـلـ★ـش</div>
-    <div class="opt-btn" onclick="rename('☬علوش☬')">☬علوش☬</div>
-    <div class="opt-btn" onclick="rename('『علوش』')">『علوش』</div>
-    <div class="opt-btn" onclick="rename('亗علوش亗')">亗علوش亗</div>
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>CH-ALLOSH SUPREME 👑</title>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@600;700&display=swap');
+        :root { --main: #ff6a00; --bg: #000; --card: #111; }
+        * { box-sizing: border-box; font-family: 'Cairo', sans-serif; margin: 0; padding: 0; }
+        body, html { height: 100%; width: 100%; background: var(--bg); color: white; overflow: hidden; position: fixed; }
+
+        /* الهيدر */
+        .top-bar { height: 60px; background: #000; border-bottom: 2px solid var(--main); display: flex; align-items: center; justify-content: space-between; padding: 0 15px; z-index: 1000; position: relative; }
+        
+        /* منطقة الشات */
+        .content { position: absolute; top: 60px; bottom: 70px; width: 100%; display: flex; }
+        .chat-view { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 10px; background: #000; }
+
+        /* القوائم الجانبية (ثابتة للموبايل والحاسبة) */
+        .side { position: fixed; top: 60px; bottom: 70px; width: 260px; background: var(--card); transition: 0.3s; z-index: 1500; overflow-y: auto; border: 1px solid #222; }
+        #side-users { left: -260px; } #side-users.open { left: 0; }
+        #side-settings { right: -260px; } #side-settings.open { right: 0; }
+
+        /* الرسائل */
+        .msg { background: #161616; padding: 12px; border-radius: 15px; border-right: 4px solid var(--main); word-wrap: break-word; }
+        .msg img { max-width: 100%; border-radius: 10px; margin-top: 5px; }
+
+        /* الفوتر */
+        .bottom-bar { position: fixed; bottom: 0; height: 70px; width: 100%; background: #0a0a0a; border-top: 1px solid #222; display: flex; align-items: center; padding: 0 10px; gap: 10px; z-index: 1000; }
+        #input { flex: 1; height: 45px; background: #1a1a1a; border: 1px solid #333; border-radius: 25px; color: white; padding: 0 15px; outline: none; }
+
+        /* النافذة المنبثقة (التحديث الداخلي) */
+        .modal { position: fixed; inset: 0; background: rgba(0,0,0,0.85); display: none; align-items: center; justify-content: center; z-index: 3000; }
+        .modal-card { background: white; width: 90%; max-width: 360px; border-radius: 25px; color: #333; overflow: hidden; text-align: center; }
+        .modal-body { padding: 20px; max-height: 450px; overflow-y: auto; }
+        .btn-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; margin: 10px 0; }
+        .opt-btn { background: #f0f0f0; border: none; padding: 10px; border-radius: 12px; cursor: pointer; font-weight: bold; }
+        .opt-btn:hover { background: var(--main); color: white; }
+
+        /* المشغل العائم */
+        #yt-float { position: fixed; top: 70px; left: 10px; width: 220px; background: #111; border: 2px solid var(--main); border-radius: 15px; z-index: 2500; display: none; overflow: hidden; box-shadow: 0 5px 20px rgba(0,0,0,0.5); }
+    </style>
+</head>
+<body>
+
+<div id="yt-float">
+    <div style="background:#222; padding:5px 10px; display:flex; justify-content:space-between; font-size:12px;">
+        <span>مشغل الإمبراطورية</span>
+        <b onclick="document.getElementById('yt-float').style.display='none'" style="cursor:pointer;">X</b>
+    </div>
+    <iframe id="yt-frame" style="width:100%; height:130px;" frameborder="0" allowfullscreen></iframe>
+</div>
+
+<div id="main-modal" class="modal">
+    <div class="modal-card">
+        <div style="padding:15px; border-bottom:1px solid #eee; font-weight:bold;">⚙️ إعدادات الملك</div>
+        <div class="modal-body">
+            <p>اختر الزخرفة:</p>
+            <div class="btn-grid">
+                <button class="opt-btn" onclick="applyRen('عـلـ★ـش')">عـلـ★ـش</button>
+                <button class="opt-btn" onclick="applyRen('☬علوش☬')">☬علوش☬</button>
+                <button class="opt-btn" onclick="applyRen('『علوش』')">『علوش』</button>
+                <button class="opt-btn" onclick="applyRen('亗علوش亗')">亗علوش亗</button>
+            </div>
+            <p style="margin-top:15px;">اختر اللون:</p>
+            <div class="btn-grid">
+                <button class="opt-btn" style="color:red" onclick="applyCol('red')">أحمر</button>
+                <button class="opt-btn" style="color:cyan" onclick="applyCol('cyan')">سماوي</button>
+                <button class="opt-btn" style="color:lime" onclick="applyCol('lime')">أخضر</button>
+                <button class="opt-btn" style="color:violet" onclick="applyCol('violet')">بنفسجي</button>
+            </div>
+        </div>
+        <button onclick="closeMod()" style="width:100%; padding:15px; background:var(--main); color:white; border:none; font-weight:bold;">حفظ وإغلاق 🔒</button>
+    </div>
+</div>
+
+<div class="top-bar">
+    <button onclick="toggleSide('users')" style="background:none; border:none; font-size:24px; color:white;">👥</button>
+    <div style="color:var(--main); font-weight:bold; font-size:18px;">CH-ALLOSH SUPREME</div>
+    <button onclick="openMod()" style="background:none; border:none; font-size:24px; color:white;">⚙️</button>
+</div>
+
+<div class="content">
+    <div id="side-users" class="side"><div style="padding:20px;"><h3>👤 المتواجدون</h3><hr><div id="u-list"></div></div></div>
+    <div class="chat-view" id="chat-box"></div>
+    <div id="side-settings" class="side"><div style="padding:20px;"><h3>⚙️ الإعدادات السريعة</h3><p>استخدم التحديث الداخلي للتغيير</p></div></div>
+</div>
+
+<div class="bottom-bar">
+    <button onclick="upImg()" style="background:none; border:none; font-size:24px; color:var(--main);">➕</button>
+    <input type="text" id="input" placeholder="تكلم يا ملك..." onkeypress="if(event.key==='Enter') send()">
+    <button onclick="send()" style="background:var(--main); border:none; width:45px; height:45px; border-radius:50%; color:white;">🚀</button>
 </div>
 
 <script>
-// دالة تغيير الاسم فوراً
-function rename(newName) {
-    me.name = newName;
-    document.getElementById('name-preview').innerText = newName;
-    // تحديث الاسم في قاعدة البيانات لكي يراه الجميع
-    db.ref('presence_v15/'+me.name).set(me);
-}
+    const config = { databaseURL: "https://masterchat-f2da9-default-rtdb.firebaseio.com" };
+    firebase.initializeApp(config);
+    const db = firebase.database();
+
+    let me = { name: "علوش", color: "#ff6a00" };
+
+    function toggleSide(id) { document.getElementById('side-'+id).classList.toggle('open'); }
+    function openMod() { document.getElementById('main-modal').style.display = 'flex'; }
+    function closeMod() { document.getElementById('main-modal').style.display = 'none'; }
+
+    function applyRen(n) { me.name = n; db.ref('p_v16/'+me.name).set(me); }
+    function applyCol(c) { me.color = c; db.ref('p_v16/'+me.name).set(me); }
+
+    function start() {
+        db.ref('p_v16/'+me.name).set(me);
+        db.ref('p_v16/'+me.name).onDisconnect().remove();
+
+        db.ref('p_v16').on('value', s => {
+            let h = "";
+            s.forEach(u => h += `<div style="padding:8px; color:${u.val().color}">● ${u.val().name}</div>`);
+            document.getElementById('u-list').innerHTML = h;
+        });
+
+        db.ref('m_v16').limitToLast(30).on('child_added', s => {
+            let d = s.val();
+            let box = document.getElementById('chat-box');
+            let div = document.createElement('div');
+            div.className = "msg";
+            
+            let txt = d.text;
+            let yt = txt.match(/(?:youtu\.be\/|youtube\.com\/.*v=)([\w-]{11})/);
+            if(yt) {
+                txt = `<div>${txt}</div><button onclick="playYT('${yt[1]}')" style="background:red; color:white; border:none; padding:5px; border-radius:5px; margin-top:5px; cursor:pointer;">▶ تشغيل الفيديو</button>`;
+            } else if(txt.startsWith('IMG:')) {
+                txt = `<img src="${txt.replace('IMG:','')}">`;
+            }
+
+            div.innerHTML = `<b style="color:${d.color}">${d.sender}:</b> <div>${txt}</div>`;
+            box.appendChild(div);
+            box.scrollTop = box.scrollHeight;
+        });
+    }
+
+    function playYT(id) {
+        document.getElementById('yt-frame').src = "https://www.youtube.com/embed/" + id + "?autoplay=1";
+        document.getElementById('yt-float').style.display = 'block';
+    }
+
+    function send() {
+        let i = document.getElementById('input');
+        if(!i.value) return;
+        db.ref('m_v16').push({ sender: me.name, color: me.color, text: i.value });
+        i.value = "";
+    }
+
+    function upImg() {
+        let i = document.createElement('input'); i.type='file'; i.accept='image/*';
+        i.onchange = e => {
+            let r = new FileReader();
+            r.onload = ev => db.ref('m_v16').push({ sender: me.name, color: me.color, text: 'IMG:'+ev.target.result });
+            r.readAsDataURL(e.target.files[0]);
+        };
+        i.click();
+    }
+
+    start();
 </script>
+</body>
+</html>
