--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>CH-ALLOSH SUPREME V2 👑</title>
+    <title>CH-ALLOSH SUPREME V3 👑</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <style>
@@ -16,7 +16,14 @@
         .content { position: absolute; top: 60px; bottom: 70px; width: 100%; display: flex; }
         .chat-view { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 12px; background: #000; }
 
-        /* ستايل الرسالة مع الصورة الشخصية */
+        /* ستايل إشعار الدخول */
+        .system-msg { 
+            align-self: center; background: rgba(255, 106, 0, 0.1); 
+            color: var(--main); padding: 5px 20px; border-radius: 20px; 
+            font-size: 12px; border: 1px solid rgba(255, 106, 0, 0.3);
+            margin: 5px 0; animation: fadeIn 0.5s;
+        }
+
         .msg-container { display: flex; align-items: flex-start; gap: 10px; }
         .user-avatar { width: 40px; height: 40px; border-radius: 50%; border: 1.5px solid var(--main); object-fit: cover; }
         .msg-content { flex: 1; background: #161616; padding: 10px; border-radius: 15px; border-right: 4px solid var(--main); }
@@ -29,47 +36,29 @@
         .bottom-bar { position: fixed; bottom: 0; height: 70px; width: 100%; background: #0a0a0a; border-top: 1px solid #222; display: flex; align-items: center; padding: 0 10px; gap: 10px; z-index: 1000; }
         #input { flex: 1; height: 45px; background: #1a1a1a; border: 1px solid #333; border-radius: 25px; color: white; padding: 0 15px; outline: none; }
 
-        /* النافذة المنبثقة */
         .modal { position: fixed; inset: 0; background: rgba(0,0,0,0.85); display: none; align-items: center; justify-content: center; z-index: 3000; }
         .modal-card { background: white; width: 90%; max-width: 360px; border-radius: 25px; color: #333; overflow: hidden; text-align: center; }
-        .modal-body { padding: 20px; max-height: 450px; overflow-y: auto; }
+        .modal-body { padding: 20px; }
         .opt-btn { background: #f0f0f0; border: none; padding: 10px; border-radius: 12px; cursor: pointer; font-weight: bold; width: 100%; margin: 5px 0; }
-        .opt-btn:hover { background: var(--main); color: white; }
 
-        #yt-float { position: fixed; top: 70px; left: 10px; width: 220px; background: #111; border: 2px solid var(--main); border-radius: 15px; z-index: 2500; display: none; overflow: hidden; }
+        @keyframes fadeIn { from { opacity: 0; transform: translateY(-10px); } to { opacity: 1; transform: translateY(0); } }
     </style>
 </head>
 <body>
 
-<div id="yt-float">
-    <div style="background:#222; padding:5px 10px; display:flex; justify-content:space-between; font-size:12px;">
-        <span>مشغل الفيديو</span>
-        <b onclick="document.getElementById('yt-float').style.display='none'" style="cursor:pointer;">X</b>
-    </div>
-    <iframe id="yt-frame" style="width:100%; height:130px;" frameborder="0"></iframe>
-</div>
-
 <div id="main-modal" class="modal">
     <div class="modal-card">
-        <div style="padding:15px; border-bottom:1px solid #eee; font-weight:bold;">⚙️ مركز التحكم الملكي</div>
+        <div style="padding:15px; border-bottom:1px solid #eee; font-weight:bold;">⚙️ مركز التحكم</div>
         <div class="modal-body">
-            <img id="current-avatar" src="https://via.placeholder.com/80" style="width:70px; height:70px; border-radius:50%; border:2px solid var(--main);">
-            <p id="rank-display" style="color:var(--main); font-size:12px;">جاري تحميل الرتبة...</p>
-            
-            <button class="opt-btn" onclick="upPhoto()">تغيير الصورة 📷</button>
-            <button class="opt-btn" onclick="location.reload()">تحديث النظام الداخلي 🔄</button>
-            <hr>
-            <p style="margin-top:10px;">اختر الزخرفة:</p>
-            <button class="opt-btn" onclick="applyRen('عـلـ★ـش')">عـلـ★ـش</button>
-            <button class="opt-btn" onclick="applyRen('☬علوش☬')">☬علوش☬</button>
+            <button class="opt-btn" onclick="location.reload()">تحديث النظام 🔄</button>
+            <button class="opt-btn" onclick="closeMod()">إغلاق</button>
         </div>
-        <button onclick="closeMod()" style="width:100%; padding:15px; background:var(--main); color:white; border:none; font-weight:bold;">حفظ وإغلاق</button>
     </div>
 </div>
 
 <div class="top-bar">
     <button onclick="toggleSide('users')" style="background:none; border:none; font-size:24px; color:white;">👥</button>
-    <div style="color:var(--main); font-weight:bold; font-size:18px;">CH-ALLOSH SUPREME</div>
+    <div style="color:var(--main); font-weight:bold;">CH-ALLOSH SUPREME</div>
     <button onclick="openMod()" style="background:none; border:none; font-size:24px; color:white;">⚙️</button>
 </div>
 
@@ -80,7 +69,7 @@
 
 <div class="bottom-bar">
     <button onclick="upImg()" style="background:none; border:none; font-size:24px; color:var(--main);">➕</button>
-    <input type="text" id="input" placeholder="تكلم يا مدير..." onkeypress="if(event.key==='Enter') send()">
+    <input type="text" id="input" placeholder="اكتب شيئاً..." onkeypress="if(event.key==='Enter') send()">
     <button onclick="send()" style="background:var(--main); border:none; width:45px; height:45px; border-radius:50%; color:white;">🚀</button>
 </div>
 
@@ -89,56 +78,50 @@
     firebase.initializeApp(config);
     const db = firebase.database();
 
-    // معلومات المستخدم مع الرتبة والصورة
+    // نحدد إذا كان المستخدم هو صاحب الشات أو عضو
     let me = { 
         name: "علوش", 
         color: "#ff6a00", 
         avatar: "https://cdn-icons-png.flaticon.com/512/3135/3135715.png",
-        rank: "المدير 👑" 
+        rank: "صاحب الشات 👑" 
     };
 
     function toggleSide(id) { document.getElementById('side-'+id).classList.toggle('open'); }
     function openMod() { document.getElementById('main-modal').style.display = 'flex'; }
     function closeMod() { document.getElementById('main-modal').style.display = 'none'; }
 
-    function applyRen(n) { me.name = n; updateDB(); }
-    function updateDB() { db.ref('p_v17/'+me.name).set(me); }
-
     function start() {
-        updateDB();
-        db.ref('p_v17/'+me.name).onDisconnect().remove();
-        document.getElementById('rank-display').innerText = me.rank;
+        // إرسال إشعار دخول عند تشغيل الكود
+        let entryMsg = me.name === "علوش" ? `👑 دخل الإمبراطور ${me.name} الآن` : `👤 دخل العضو ${me.name} للمجلس`;
+        db.ref('m_v18').push({ system: true, text: entryMsg });
 
-        db.ref('p_v17').on('value', s => {
-            let h = "";
-            s.forEach(u => h += `<div style="padding:8px; color:${u.val().color}">● ${u.val().name} <small style="font-size:8px;">(${u.val().rank})</small></div>`);
-            document.getElementById('u-list').innerHTML = h;
-        });
+        db.ref('p_v18/'+me.name).set(me);
+        db.ref('p_v18/'+me.name).onDisconnect().remove();
 
-        db.ref('m_v17').limitToLast(30).on('child_added', s => {
+        db.ref('m_v18').limitToLast(30).on('child_added', s => {
             let d = s.val();
             let box = document.getElementById('chat-box');
             
-            let txt = d.text;
-            let yt = txt.match(/(?:youtu\.be\/|youtube\.com\/.*v=)([\w-]{11})/);
-            if(yt) {
-                txt = `<div>${txt}</div><button onclick="playYT('${yt[1]}')" style="background:red; color:white; border:none; padding:5px; border-radius:5px; margin-top:5px;">▶ تشغيل</button>`;
-            } else if(txt.startsWith('IMG:')) {
-                txt = `<img src="${txt.replace('IMG:','')}">`;
+            if(d.system) {
+                // إذا كانت رسالة نظام (إشعار دخول)
+                let sysDiv = document.createElement('div');
+                sysDiv.className = "system-msg";
+                sysDiv.innerText = d.text;
+                box.appendChild(sysDiv);
+            } else {
+                // رسالة عادية
+                let msgDiv = document.createElement('div');
+                msgDiv.className = "msg-container";
+                msgDiv.innerHTML = `
+                    <img src="${d.avatar}" class="user-avatar">
+                    <div class="msg-content">
+                        <span class="rank-tag">${d.rank}</span>
+                        <b style="color:${d.color}">${d.sender}:</b>
+                        <div style="margin-top:5px;">${d.text}</div>
+                    </div>
+                `;
+                box.appendChild(msgDiv);
             }
-
-            // إنشاء الرسالة مع صورة الشخص بصفها
-            let msgDiv = document.createElement('div');
-            msgDiv.className = "msg-container";
-            msgDiv.innerHTML = `
-                <img src="${d.avatar || me.avatar}" class="user-avatar">
-                <div class="msg-content">
-                    <span class="rank-tag">${d.rank || 'عضو'}</span>
-                    <b style="color:${d.color}">${d.sender}:</b>
-                    <div style="margin-top:5px;">${txt}</div>
-                </div>
-            `;
-            box.appendChild(msgDiv);
             box.scrollTop = box.scrollHeight;
         });
     }
@@ -146,43 +129,14 @@
     function send() {
         let i = document.getElementById('input');
         if(!i.value) return;
-        db.ref('m_v17').push({ 
+        db.ref('m_v18').push({ 
             sender: me.name, 
             color: me.color, 
             text: i.value, 
-            avatar: me.avatar, // إرسال الصورة مع الرسالة
-            rank: me.rank     // إرسال الرتبة مع الرسالة
+            avatar: me.avatar, 
+            rank: me.rank 
         });
         i.value = "";
-    }
-
-    function playYT(id) {
-        document.getElementById('yt-frame').src = "https://www.youtube.com/embed/" + id + "?autoplay=1";
-        document.getElementById('yt-float').style.display = 'block';
-    }
-
-    function upPhoto() {
-        let i = document.createElement('input'); i.type='file'; i.accept='image/*';
-        i.onchange = e => {
-            let r = new FileReader();
-            r.onload = ev => {
-                me.avatar = ev.target.result;
-                document.getElementById('current-avatar').src = me.avatar;
-                updateDB();
-            };
-            r.readAsDataURL(e.target.files[0]);
-        };
-        i.click();
-    }
-
-    function upImg() {
-        let i = document.createElement('input'); i.type='file'; i.accept='image/*';
-        i.onchange = e => {
-            let r = new FileReader();
-            r.onload = ev => db.ref('m_v17').push({ sender: me.name, color: me.color, text: 'IMG:'+ev.target.result, avatar: me.avatar, rank: me.rank });
-            r.readAsDataURL(e.target.files[0]);
-        };
-        i.click();
     }
 
     start();
